[package]
name = "html_export"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Hodson thomas.hodson.pro@gmail.com"]
description = "Basic struct & enums to html file conversion crate"
repository = "https://github.com/Hodson-Thomas/Rust-Html-Export"
homepage = "https://github.com/Hodson-Thomas/Rust-Html-Export/wiki"
keywords = ["html", "conversion", "generation", "rust"]
categories = [""]
licence = "MIT"

[dependencies]
